--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,3 +1,5 @@
-body {
-  margin: 0;
-}
+@import './colors.scss';
+@import './layout.scss';
+@import './main.scss';
+@import './reset.scss';
+@import './typography.scss';
